crates/nirvash-macros/tests/fixtures/derive_signature_custom_with_bounds.stderr
error: #[signature(custom)] cannot be combined with bounds, filter, range, or #[signature_invariant(...)] helpers
 --> tests/fixtures/derive_signature_custom_with_bounds.rs:5:8
  |
5 | struct State {
  |        ^^^^^
